# gl_practice

./: CMakeLists.txt  README.md  first.cpp  lookarround.cpp  lookarround_bk.cpp  texture.cpp  texture2.cpp  triangle.cpp  txt2img.m
